--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
             
         </div>
         <script src="js/lingo-nl.js"></script>
-        <script src="js/test.js"></script>
+        <script src="js/script.js"></script>
    </body>
 </html>
