--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div id="bord">
             
         </div>
+        <div id="lingoBord">
+            
+        </div>
         <script src="js/lingo-nl.js"></script>
         <script src="js/script.js"></script>
    </body>
